# q_term

./: Cargo.toml  README.md  justfile
examples/: input.rs  minimal.rs  palette.rs  program.rs  spinner.rs
src/: ansi.rs  data.rs  lib.rs  messages.rs  plugin.rs  plugins.rs  systems.rs
src/data/: io.rs  mod.rs  process.rs  shell.rs  term.rs  term_events.rs  terminfo.rs  ui.rs
src/msgs/: mod.rs  prog.rs  term.rs
src/systems/: mod.rs  prog.rs  term.rs
tests/: tests.rs
tests/term/: ansi.rs  command_msg.rs  cursor.rs  drain.rs  erase.rs  hello_world.rs  mod.rs  ordering.rs  pending_input.rs  pending_input_cap.rs  pending_scroll.rs  plugin_schedules.rs  resize_hidpi.rs  row_target_invariant.rs  shift.rs  sm_rm.rs  trackpad_scroll_accumulates.rs  typed_messages.rs  vtsize_cw_divide_by_zero.rs  writeback.rs
