[package]
name = "q_term"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cubething-qproj/q_term"

[dependencies]
bevy = "0.18"
bevy-inspector-egui = "0.36.0"
bevy_dylib = { optional = true, version = "0.18.0" }
tiny_bail = "0.7.0"
itertools = "0.14.0"
anstyle-parse = "1.0.0"

[dev-dependencies]
q_test_harness = { git = "https://github.com/cubething-qproj/q_test_harness", version = "^0.1" }

[features]
dylib= ["bevy/dynamic_linking", "dep:bevy_dylib"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[workspace]
resolver = "3"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
